--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,13 @@
-Django==5.2.1
+Django==5.0.6
+django-bootstrap5==24.2
+django-widget-tweaks==1.5.0
+djangorestframework==3.15.1
+django-crispy-forms==2.1
+crispy-bootstrap5==2024.2
+gunicorn==22.0.0
+whitenoise==6.7.0
+dj-database-url==2.1.0
+python-dotenv==1.0.1
 asgiref==3.8.1
 sqlparse==0.5.3
 tzdata==2025.2
